[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ddex"
authors = [{name = "Anthony Corletti", email = "anthcor@gmail.com"}]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "xmlschema >=1.11.0",
    "xmltodict >=0.12.0",
    "lxml >=4.4.2",
    "xsdata[cli,lxml] >=22.7",
]

[project.urls]
Documentation = "https://www.github.com/anthonycorletti/ddex"

[project.optional-dependencies]
test = [
    "pytest >=6.2.5",
    "coverage >=6.1.1",
    "pytest-cov >=3.0.0",
]
doc = [
    "mkdocs >=1.1.2",
    "mkdocs-material >=8.1.4",
    "mdx-include >=1.4.1",
]
dev = [
    "flake8 >=3.9.2",
    "mypy >=0.910",
    "black >=21.10b0",
    "isort >=5.9.3",
    "autoflake >=1.4",
    "flake8-docstrings >=1.6.0",
    "pre-commit >=2.17.0",
]

[tool.isort]
profile = "black"
